2004/02/12 19:55 (+0100) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* README: Version 0.92.

2004/02/12 19:21 (+0100) kaffeetisch

	* t/GnomeIconTheme.t: Only test if get_search_path returned
	something defined.

	* t/GnomeProgram.t: Use properties that are not construct-only to
	work around the problem for now.

	* t/GnomePopupMenu.t
	* xs/GnomePopupMenu.xs: Change the binding for
	gnome_popup_menu_attach to Gtk2::Menu::attach_to.

2004/02/11 02:02 (+0100) kaffeetisch

	* Makefile.PL
	* xs/GnomeProgram.xs
	* t/GnomeProgram.t: Use and test the new GPerlArgv helper.

2004/02/10 19:01 (+0100) kaffeetisch

	* t/GnomeConfig.t: Re-enable the get_float_with_default test, with
	skips.  The relevant bug has been fixed in libgnomeui 2.5.4.

	* t/GnomeIconSelection.t: Don't check the return value of
	get_icon, there seems to be no way to predict it.

2004/02/10 17:01 (+0100) kaffeetisch

	Applying a patch from muppet.

	A copyright.pod
	A doctypes
	* MANIFEST
	* Makefile.PL
	* gnome2perl.h: Use the new features of ExtUtils::Depends and
	ExtUtils::PkgConfig.  Depend on Gnome2::Canvas.  Use
	'gnome2perl-versions.h' for the version macros.

2004/01/27 19:40 (+0100) kaffeetisch

	* t/GnomeClient: Use the correct
	Gnome2::Client->interaction_key_return syntax.

	* xs/GnomeAppHelper.xs: Mark ix unused in some places.

	* xs/GnomeClient.xs
	* xs/GnomeUtil.xs: Avoid creating two xsubs with ALIAS when we
	really only want one.

	* gnome2perl.h
	* xs/GnomeWindow.xs: Remove some apparently unneeded #include's.

2004/01/26 01:47 (-0500) muppetman

	* xs/GnomeWindow.xs: bad muppet, that should've been
	#undef GNOME_DISABLE_DEPRECATED.

2004/01/25 23:26 (-0500) muppetman

	* xs/GnomeClient.xs, xs/GnomeUtil.xs: hush unused var warnings

	* xs/GnomeWindow.xs: #define GNOME_DISABLE_DEPRECATED, so
	gnome_window_toplevel_set_title() is defined at compile time.  (it
	was deprecated in october of '03.)

2004/01/24 21:44 (-0500) rwmcfa1
